# Point-of-Sales-POS-system

./: README.md
Final/: .gitignore  Makefile  pyproject.toml  requirements.txt
Final/app/core/: campaign.py  campaign_observers.py  currency.py  product.py  receipt.py  receipt_item.py  report.py  shift.py
Final/app/core/Models/: campaign.py  receipt.py  report.py
Final/app/infrastructure/fastapi/: campaign.py  dependables.py  product.py  receipt.py  shift.py
Final/app/infrastructure/sqlite/: campaign_db.py  producs_in_memory_db.py  product_db.py  receipt_db.py  receipt_item_db.py  shift_db.py
Final/app/infrastructure/sqlite/inmemory/: campaigns_in_memory_db.py  receipt_in_memory_db.py  receipt_item_in_memory_db.py
Final/app/runner/: setup.py  store.db
Final/app/tests/: test_campaigns_api.py  test_products_api.py  test_receipt_api.py
